<resources>
    <string name="app_name">UNIM HelpDesk</string>
    <string name="name_sales">Name Sales</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_sales_planing_kegiatan">SalesPlaningKegiatanActivity</string>
    <string name="realisasi_pengiriman">Buat Tiket</string>
    <string name="plan_pengiriman">List Tiket</string>
    <string name="todo">TODO</string>
    <string name="geo_tag">List Article</string>
    <string name="history_pengiriman">History Pengiriman</string>
    <string name="title_activity_realisasi_kegiatan">RealisasiKegiatanActivity</string>
    <string name="search">Search</string>
    <string name="search_hint">Cari...</string>
    <string name="title_activity_driver_planing_kegiatan">DriverPlaningKegiatanActivity</string>
    <string name="title_activity_driver_realisasi_kegiatan">DriverRealisasiKegiatanActivity</string>
    <string name="camera_and_location_rationale">Apps Ini Membutuhkan Akses Kamera, GPS, STORAGE.</string>
    <string name="title_activity_sales_geotag">SalesGEOTagActivity</string>
    <string name="title_activity_sales_geotag_detail">SalesGEOTagDetailActivity</string>
    <string name="btn_simpan">Simpan</string>
    <string name="koordinat_tempat">Lokasi Tempat</string>
    <string name="no_telepon_customer">No Telepon Customer</string>
    <string name="nama_customer">Nama Customer</string>
    <string name="nama_customer2">Nama Customer</string>
    <string name="alamat_customer">Alamat Customer</string>
    <string name="foto_tampak_depan">Foto Tampak Depan</string>
    <string name="foto_tampak_Belakang">Foto Tampak Belakang</string>
    <string name="title_activity_sales_realisasi_check">SalesRealisasiCheckActivity</string>
    <string name="check_nama_toko">Dani Jaya</string>
    <string name="est_sampai_lokasi">Est. Sampai Lokasi</string>
    <string name="jam_8_30">8.30</string>
    <string name="pic_customer">PIC Customer</string>
    <string name="name_person">Nama Orang</string>
    <string name="val_no_tlpn">087824566348</string>
    <string name="valKeperluan">Info EKatalog Baru</string>
    <string name="keperluan">Keperluan</string>
    <string name="satusCheck">Status</string>
    <string name="valStatusCheck">Belum Dijalankan</string>
    <string name="checkIn">Check In</string>
    <string name="valCheckin">-</string>
    <string name="valCheckOut">-</string>
    <string name="CheckOut">Check Out</string>
    <string name="btn_CheckIn">Check In</string>
    <string name="val_alamat_customer">Perum Rungkut Asri XI Surabaya Jawa Timur</string>
    <string name="title_activity_sales_add_complain">SalesAddComplainActivity</string>
    <string name="dapertemen_tujuan">Dapertemen Tujuan</string>
    <string name="title_activity_sales_complain">SalesComplainActivity</string>
    <string name="title_activity_sales_list_customer">SalesListCustomerActivity</string>
    <string name="customer">Customer</string>
    <string name="geo_tag2">Geo Tag</string>
    <string name="complain">Complain</string>
    <string name="update_kegiatan">Update Kegiatan</string>
    <string name="update_jadwal">Update jadwal</string>
    <string name="tambah_jadwal">Tambah jadwal</string>
    <string name="title_activity_sales_jadwal_form">SalesJadwalFormActivity</string>
    <string name="title_activity_sales_update_kegiatan">SalesUpdateKegiatanActivity</string>
    <string name="title_activity_sales_review_realisasi">SalesReviewRealisasiActivity</string>
    <string name="title_activity_sales_review_kegiatan">SalesReviewKegiatanActivity</string>
    <string name="tanggal">Tanggal</string>
    <string name="cari">Cari</string>
    <string name="reset">Reset</string>
    <string name="lorem_ipsum">lorem ipsum dolor sit,lorem ipsum dolor sit,lorem ipsum dolor sit ,lorem ipsum dolor sit</string>
    <string name="title_activity_sales_review_update">SalesReviewUpdateActivity</string>
    <string name="title_activity_sales_review_complain">SalesReviewComplainActivity</string>
    <string name="title_activity_driver_review_pengiriman">DriverReviewPengirimanActivity</string>
    <string name="universitas_islam_majapahit">UNIVERSITAS ISLAM MAJAPAHIT</string>
    <string name="password">Password</string>
    <string name="no_account_yet_create_one">No account yet? Create one</string>
    <string name="title_activity_list_tiket">List Tiket Activity</string>
    <string name="title_activity_detail_tiket">Detail Tiket Activity</string>
    <string name="title_activity_detail_artikel">Artikel</string>
    <string name="close_tiket">Close Tiket</string>
    <string name="attachment">Attachment</string>
</resources>
