<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Activity.Sales.SalesGEOTagDetailActivity"
    tools:showIn="@layout/activity_sales_geotag_detail">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnSimpan"
        android:layout_margin="8dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/nama_customer"

                    android:textColor="#000" />

                <EditText
                    android:id="@+id/namaCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/nama_customer"
                    android:inputType="textPersonName" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/alamat_customer"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/alamatCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/alamat_customer" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginBottom="8dp"
                    android:text="@string/no_telepon_customer"
                    android:textColor="#000" />

                <EditText
                    android:id="@+id/NoTeleponCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:hint="@string/no_telepon_customer"
                    android:inputType="phone"
                    android:lines="1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/foto_tampak_depan"
                    android:textColor="#000" />

                <ImageView
                    android:id="@+id/fotoTampakDepan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/done_delivery" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/foto_tampak_Belakang"
                    android:textColor="#000" />

                <ImageView
                    android:id="@+id/fotoTampakBelakang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/done_delivery" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/koordinat_tempat"
                    android:textColor="#000" />

                <TextView
                    android:id="@+id/koordinatMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000" />


                <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                    xmlns:tools="http://schemas.android.com/tools"
                    android:id="@+id/map"
                    android:name="com.google.android.gms.maps.SupportMapFragment"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginBottom="8dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/idReset"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="2dp"
                            android:background="#F02929"
                            android:padding="5dp"
                            android:text="Reset"

                            android:textAlignment="center"
                            android:textColor="#FFF" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/GetTag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="2dp"
                            android:layout_toRightOf="@+id/idReset"
                            android:background="#F02929"
                            android:padding="5dp"
                            android:text="Get Tag"
                            android:textAlignment="center"
                            android:textColor="#FFF" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnSimpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colordasar"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/btn_simpan"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="25sp" />
</RelativeLayout>